<resources>
    <string name="app_name">Kings Game</string>
    <string name="email">Correo electrónico</string>
    <string name="clave">Contraseña</string>
    <string name="bt_login">ENTRAR</string>
    <string name="bt_registro">REGISTRARSE</string>
    <string name="registro_titulo">REGISTRO</string>
    <string name="claveAgain">Confirmar contraseña</string>
    <string name="bt_guardar">GUARDAR</string>
    <string name="action_close">Cerrar sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="origen">Origen</string>
    <string name="genero">Género</string>
    <string name="posicion">Posición</string>
    <string name="barrio">Barrio</string>
    <string name="celular">Celular</string>
    <string name="ext">+57</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="fecha">yyyy/MM/dd</string>
    <string name="sexF">Femenino</string>
    <string name="sexM">Masculino</string>
    <string name="lugar_nacimiento">Lugar de nacimiento</string>
    <string name="foto">Foto</string>
    <string name="bt_comenzar">COMENZAR</string>
    <string name="sector">Sector</string>
    <string name="edad2">EDAD</string>
    <string name="origen2">ORIGEN</string>
    <string name="num_edad">21</string>
    <string name="puntaje">Puntaje</string>
    <string name="responsable">Responsabilidad</string>
    <string name="limpio">Juego Limpio</string>
    <string name="velocidad">Velocidad</string>
    <string name="salto">Salto</string>
    <string name="regate">Regate</string>
    <string name="resistencia">Resistencia</string>
    <string name="enEquipo">Juego en equipo</string>
    <string-array name="lista_ciudades">
        <item>Seleccione una ciudad</item>
        <item>Otro</item>
        <item>Extranjero</item>
        <item>Armenia</item>
        <item>Barranquilla</item>
        <item>Bello</item>
        <item>Bogotá</item>
        <item>Bucaramanga</item>
        <item>Cali</item>
        <item>Cartagena</item>
        <item>Cúcuta</item>
        <item>Ibagué</item>
        <item>Manizales</item>
        <item>Medellín</item>
        <item>Montería</item>
        <item>Neiva</item>
        <item>Pasto</item>
        <item>Pereira</item>
        <item>Santa Marta</item>
        <item>Soacha</item>
        <item>Soledad</item>
        <item>Valledupar</item>
        <item>Villavicencio</item>
    </string-array>
    <string-array name="lista_comunas">
        <item>Seleccione la comuna donde vive</item>
        <item>Otro</item>
        <item>Aranjuez</item>
        <item>Belén</item>
        <item>Buenos Aires</item>
        <item>Castilla</item>
        <item>Doce de Octubre</item>
        <item>El Poblado</item>
        <item>Guayabal</item>
        <item>La América</item>
        <item>La Candelaria</item>
        <item>Laureles-Estadio</item>
        <item>Manrique</item>
        <item>Popular</item>
        <item>Robledo</item>
        <item>San Javier</item>
        <item>Santa Cruz</item>
        <item>Villa Hermosa</item>
    </string-array>
    <string-array name="reclutar_comunas">
        <item>Seleccione una comuna</item>
        <item>Otro</item>
        <item>Aranjuez</item>
        <item>Belén</item>
        <item>Buenos Aires</item>
        <item>Castilla</item>
        <item>Doce de Octubre</item>
        <item>El Poblado</item>
        <item>Guayabal</item>
        <item>La América</item>
        <item>La Candelaria</item>
        <item>Laureles-Estadio</item>
        <item>Manrique</item>
        <item>Popular</item>
        <item>Robledo</item>
        <item>San Javier</item>
        <item>Santa Cruz</item>
        <item>Villa Hermosa</item>
    </string-array>
    <string-array name="Aranjuez">
        <item>Aranjuez</item>
        <item>Berlín</item>
        <item>Bermejal - Los Álamos</item>
        <item>Brasilia</item>
        <item>Campo Valdés Nº 1</item>
        <item>La Piñuela</item>
        <item>Las Esmeraldas</item>
        <item>Manrique Central Nº 1</item>
        <item>Miranda</item>
        <item>Moravia</item>
        <item>Palermo</item>
        <item>San Isidro</item>
        <item>San Pedro</item>
        <item>Sevilla</item>
    </string-array>
    <string-array name="Belen">
        <item>Aguas Frías</item>
        <item>Altavista</item>
        <item>Belén</item>
        <item>Cerro Nutibara</item>
        <item>Diego Echavarria</item>
        <item>El Nogal - Los Almendros</item>
        <item>El Rincón</item>
        <item>Fátima</item>
        <item>Granada</item>
        <item>La Gloria</item>
        <item>La Hondonada</item>
        <item>La Loma de Los Bernal</item>
        <item>La Mota</item>
        <item>La Palma</item>
        <item>Las Mercedes</item>
        <item>Las Playas</item>
        <item>Las Violetas</item>
        <item>Los Alpes</item>
        <item>Miravalle</item>
        <item>Nueva Villa de Aburrá</item>
        <item>Rodeo Alto</item>
        <item>Rosales</item>
        <item>San Bernardo</item>
        <item>Zafra</item>
    </string-array>
    <string-array name="BuenosAires">
        <item>Alejandro Echavarría</item>
        <item>Asomadera Nº 1</item>
        <item>Asomadera Nº 2</item>
        <item>Asomadera Nº 3</item>
        <item>Barrios de Jesús</item>
        <item>Bomboná Nº 2</item>
        <item>Buenos Aires</item>
        <item>Caicedo</item>
        <item>Cataluña</item>
        <item>El Salvador</item>
        <item>Gerona</item>
        <item>Juan Pablo II</item>
        <item>La Milagrosa</item>
        <item>Loreto</item>
        <item>Los Cerros - El Vergel</item>
        <item>Miraflores</item>
        <item>Ocho de Marzo</item>
        <item>Quinta Linda</item>
    </string-array>
    <string-array name="Castilla">
        <item>Alfonso López</item>
        <item>Belalcázar</item>
        <item>Boyacá</item>
        <item>Caribe</item>
        <item>Castilla</item>
        <item>El Progreso</item>
        <item>Florencia</item>
        <item>Francisco Antonio Zea</item>
        <item>Girardot</item>
        <item>Héctor Abad Gómez</item>
        <item>Las Brisas</item>
        <item>Tejelo</item>
        <item>Toscana</item>
        <item>Tricentenario</item>
    </string-array>
    <string-array name="DoceDeOctubre">
        <item>Doce de Octubre Nº 1</item>
        <item>Doce de Octubre Nº 2</item>
        <item>El Progreso Nº 2</item>
        <item>El Triunfo</item>
        <item>Kennedy</item>
        <item>La Esperanza</item>
        <item>Mirador del Doce</item>
        <item>Pedregal</item>
        <item>Picachito</item>
        <item>Picacho</item>
        <item>San Martín de Porres</item>
        <item>Santander</item>
    </string-array>
    <string-array name="ElPoblado">
        <item>Alejandría</item>
        <item>Altos del Poblado</item>
        <item>Astorga</item>
        <item>Barrio Colombia</item>
        <item>Castropol</item>
        <item>El Castillo</item>
        <item>El Diamante</item>
        <item>El Poblado</item>
        <item>El Tesoro</item>
        <item>La Aguacatala</item>
        <item>La Florida</item>
        <item>Lalinde</item>
        <item>Las Lomas Nº 1</item>
        <item>Las Lomas Nº 2</item>
        <item>Los Balsos Nº 1</item>
        <item>Los Balsos Nº 2</item>
        <item>Los Naranjos</item>
        <item>Manila</item>
        <item>Patio Bonito</item>
        <item>San Lucas</item>
        <item>Santa María de Los Ángeles</item>
        <item>Villa Carlota</item>
    </string-array>
    <string-array name="Guayabal">
        <item>Campo Amor</item>
        <item>Cristo Rey</item>
        <item>Guayabal</item>
        <item>La Colina</item>
        <item>Santa Fe</item>
        <item>Tenche</item>
        <item>Trinidad</item>
    </string-array>
    <string-array name="LaAmerica">
        <item>Barrio Cristóbal</item>
        <item>Calasanz</item>
        <item>Calasanz Parte Alta</item>
        <item>Campo Alegre</item>
        <item>El Danubio</item>
        <item>Ferrini</item>
        <item>La América</item>
        <item>La Floresta</item>
        <item>Los Pinos</item>
        <item>Santa Lucía</item>
        <item>Santa Mónica</item>
        <item>Santa Teresita</item>
        <item>Simón Bolívar</item>
    </string-array>
    <string-array name="LaCandelaria">
        <item>Barrio Colón</item>
        <item>Bomboná Nº 1</item>
        <item>Boston</item>
        <item>Calle Nueva</item>
        <item>Corazón de Jesús - Barrio Triste</item>
        <item>El Chagualo</item>
        <item>Estación Villa</item>
        <item>Guayaquil</item>
        <item>Jesús Nazareno</item>
        <item>La Candelaria</item>
        <item>Las Palmas</item>
        <item>Los Ángeles</item>
        <item>Perpetuo Socorro</item>
        <item>Prado</item>
        <item>San Benito</item>
        <item>San Diego</item>
        <item>Villa Nueva</item>
    </string-array>
    <string-array name="Laureles">
        <item>Bolivariana</item>
        <item>Carlos E. Restrepo</item>
        <item>Cuarta Brigada</item>
        <item>El Velódromo</item>
        <item>Estadio</item>
        <item>Florida Nueva</item>
        <item>La Castellana</item>
        <item>Las Acacias</item>
        <item>Laureles</item>
        <item>Lorena</item>
        <item>Los Colores</item>
        <item>Los Conquistadores</item>
        <item>Naranjal</item>
        <item>San Joaquín</item>
        <item>Suramericana</item>
    </string-array>
    <string-array name="Manrique">
        <item>Campo Valdés Nº 2</item>
        <item>El Pomar</item>
        <item>El Raizal</item>
        <item>La Cruz</item>
        <item>La Honda</item>
        <item>La Salle</item>
        <item>Las Granjas</item>
        <item>Manrique Central Nº 2</item>
        <item>Manrique Oriental</item>
        <item>Maria Cano - Carambola</item>
        <item>Oriente</item>
        <item>San José La Cima Nº 1</item>
        <item>San José La Cima Nº 2</item>
        <item>Santa Inés</item>
        <item>Versalles Nº 1</item>
        <item>Versalles Nº 2</item>
    </string-array>
    <string-array name="Popular">
        <item>Aldea Pablo VI</item>
        <item>Carpinelo</item>
        <item>El Compromiso</item>
        <item>Granizal</item>
        <item>La Avanzada</item>
        <item>La Esperanza Nº 2</item>
        <item>Moscú Nº 2</item>
        <item>Popular Nº 1</item>
        <item>Popular Nº 2</item>
        <item>Santo Domingo Savio Nº 1</item>
        <item>Santo Domingo Savio Nº 2</item>
        <item>San Pablo</item>
        <item>Villa Guadalupe</item>
    </string-array>
    <string name="menu_equipo">Equipo</string>
    <string name="bt_eliminar">ELIMINAR</string>
    <string name="admin">Permiso de editar</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="bt_continuar">CONTINUAR</string>
    <string name="bt_filtrar">FILTRAR</string>
    <string name="aviso_barrio">Tomar en cuenta la selección del barrio</string>
    <string name="aviso_edad">Rango de edad</string>
    <string name="aviso_reclutar">No hay jugadores</string>
    <string name="tit_reclutar">Filtra tu búsqueda</string>
    <string name="edad_min">De</string>
    <string name="edad_max">Hasta</string>
    <string name="menu_noticia">Noticias</string>
    <string name="menu_ranking">Ranking</string>
</resources>