<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.equipo.PlayerEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/amiko"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amiko"
            android:text="@string/admin"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/rbt_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="@font/amiko"
                android:text="@string/on"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbt_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amiko"
                android:text="@string/off"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/bt_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bt_rounded_border"
            android:fontFamily="@font/amiko"
            android:text="@string/bt_eliminar"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bt_rounded"
            android:fontFamily="@font/amiko"
            android:text="@string/bt_guardar"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_team"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            android:src="@drawable/team"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/bt_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bt_rounded"
            android:fontFamily="@font/amiko"
            android:text="@string/bt_continuar"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>