<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.busqueda.InvitacionPersonaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/francois_one"
            android:text="@string/tit_reclutar"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/sp_posicion"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_rounded"
            android:entries="@array/reclutar_posiciones" />

        <Spinner
            android:id="@+id/sp_comuna"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_rounded"
            android:entries="@array/reclutar_comunas" />

        <Spinner
            android:id="@+id/sp_barrio"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/et_rounded"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_barrio"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/rOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rbt_si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="@font/amiko"
                android:text="@string/si"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbt_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amiko"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_edad"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_edadMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/amiko"
                android:hint="@string/edad_min"
                android:inputType="number"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_edadMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/amiko"
                android:hint="@string/edad_max"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_filtrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bt_rounded"
            android:fontFamily="@font/amiko"
            android:text="@string/bt_filtrar"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_aviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/amiko"
            android:gravity="center_vertical"
            android:text="@string/aviso_reclutar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="gone"
            tools:ignore="RtlCompat" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            tools:listitem="@layout/item_invitar_user">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>